--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,2 +1,15 @@
-<h1>Restaurants#show</h1>
-<p>Find me in app/views/restaurants/show.html.erb</p>
+<div class="container">
+  <h1>Restaurant Details</h1>
+  <hr>
+  <h3><%= @restaurant.name %></h3>
+  <p><%= @restaurant.address %></p>
+  <p><%= @restaurant.phone_number %></p>
+  <p><%= @restaurant.category.capitalize %></p>
+  <h5>Ratings</h5>
+  <% @restaurant.reviews.each do |review| %>
+    <p><%= review.content %></p>
+    <hr>
+  <% end %>
+  <%= link_to "Add a Review", new_restaurant_review_path(@restaurant) %>
+  <%= link_to "Back to All Restaurants", restaurants_path %>
+</div>
